# kivy-app-hello-world

./: .gitignore  README.md  build-wheels.sh  install_run_iphone.sh  pyproject.toml
project_dist/xcode/HelloWorld.xcodeproj/: project.pbxproj
project_dist/xcode/MyNewKivyApp.xcodeproj/: project.pbxproj
project_dist/xcode/MyNewKivyApp.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
project_dist/xcode/Resources/Images.xcassets/AppIcon.appiconset/: Contents.json
project_dist/xcode/Sources/: Info.plist
project_dist/xcode/Sources/IphoneOS/: main.swift
project_dist/xcode/Sources/MacOS/: main.swift
project_dist/xcode/Support/: dylib-Info-template.plist
project_dist/xcode/Support/SDL3.xcframework/ios-arm64/SDL3.framework/: Info.plist  SDL3
project_dist/xcode/Support/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3
project_dist/xcode/Support/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/_CodeSignature/: CodeResources
project_dist/xcode/Support/SDL3_image.xcframework/: Info.plist
project_dist/xcode/Support/SDL3_image.xcframework/ios-arm64/SDL3_image.framework/: Info.plist  SDL3_image
project_dist/xcode/Support/SDL3_image.xcframework/ios-arm64_x86_64-simulator/SDL3_image.framework/: Info.plist  SDL3_image
project_dist/xcode/Support/SDL3_mixer.xcframework/: Info.plist
project_dist/xcode/Support/SDL3_mixer.xcframework/ios-arm64/SDL3_mixer.framework/: SDL3_mixer
project_dist/xcode/Support/SDL3_mixer.xcframework/ios-arm64_x86_64-simulator/SDL3_mixer.framework/: SDL3_mixer
project_dist/xcode/Support/SDL3_ttf.xcframework/: Info.plist
project_dist/xcode/Support/SDL3_ttf.xcframework/ios-arm64/SDL3_ttf.framework/: Info.plist
project_dist/xcode/Support/SDL3_ttf.xcframework/ios-arm64_x86_64-simulator/SDL3_ttf.framework/: Info.plist  SDL3_ttf
project_dist/xcode/Support/ios-arm64/platform-config/arm64-iphoneos/: _sysconfigdata__ios_arm64-iphoneos.py
project_dist/xcode/Support/ios-arm64_x86_64-simulator/lib/python3.13/: _sysconfigdata__ios_arm64-iphonesimulator.py
project_dist/xcode/Support/ios-arm64_x86_64-simulator/platform-config/x86_64-iphonesimulator/: _sysconfigdata__ios_x86_64-iphonesimulator.py
project_dist/xcode/Support/libEGL.xcframework/: Info.plist
project_dist/xcode/Support/libEGL.xcframework/ios-arm64/libEGL.framework/: Info.plist  libEGL
project_dist/xcode/Support/libEGL.xcframework/ios-arm64_x86_64-simulator/libEGL.framework/: Info.plist  libEGL
project_dist/xcode/Support/libGLESv2.xcframework/: Info.plist
project_dist/xcode/Support/libGLESv2.xcframework/ios-arm64/libGLESv2.framework/: Info.plist
project_dist/xcode/Support/libGLESv2.xcframework/ios-arm64_x86_64-simulator/libGLESv2.framework/: Info.plist
project_dist/xcode/Support/macos-arm64_x86_64/lib/: libform.6.dylib  libncurses.6.dylib
project_dist/xcode/app/: __main__.py
ps_launcher/: RUN_ON_IPHONE.md  pyproject.toml
ps_launcher/src/ps_launcher/: __init__.py
src/mynewkivyapp/: app.py
wheel_sources/: fix_macos_frameworks.sh  kivy_md_wheel.sh  kivy_wheels.sh
wheels/simple/kivy/: index.html
(+11 files in other folders)
